[package]
name = "geneticAlgorithmFJSP"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1.6"
rand = "0.8"
shuffle = "0.1.7"
regex = "1.6.0"
rayon="1.5.3"
